--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
+    "googleapis": "^131.0.0",
     "next": "14.2.3"
   },
   "devDependencies": {
