--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.1.0",  <-- ADD THIS LINE
     "react": "^18",
     "react-dom": "^18",
     "googleapis": "^131.0.0",
