--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/genai": "^0.14.0",  
     "react": "^18",
     "react-dom": "^18",
-    "googleapis": "^131.0.0",
     "next": "14.2.3"
   },
   "devDependencies": {
@@ -21,6 +19,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19"
   }
 }
