--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-vercel-app",
+  "name": "nextjs-vercel-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,10 +18,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.19"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
